# Practica_1

./: CMakeLists.txt  README.md  main.cpp
ParentClasses/: F1Team.cpp  F1Team.h
SubClasses/: PitCrewTeam.cpp  PitCrewTeam.h  TeamDriverA.cpp  TeamDriverA.h  TeamDriverB.cpp  TeamDriverB.h
SubSubClasses/: FrontJack.cpp  FrontJack.h  LollipopMan.cpp  LollipopMan.h  RearJack.cpp  RearJack.h  SideJack.cpp  SideJack.h  TyreGunner.cpp  TyreGunner.h  TyreOff.cpp  TyreOff.h  TyreOn.cpp  TyreOn.h  WingFlap.cpp  WingFlap.h
